style: fix styles,spacing of components of company details

--- a/public/scss/global.scss
+++ b/public/scss/global.scss
@@ -18,3 +18,11 @@ body {
     }
   }
 }
+
+*,
+::before,
+::after {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
